--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,137 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
-    <!-- 
-      This is the main Handlebars template for the site 
-      - When the user visits the homepage or submits a color the app calls the endpoints in server.js
-      - The server script passes data in here and the Handlebars code builds it into the HTML page
-    -->
-    
     <meta charset="utf-8" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.glitch.global/5521eed1-df1a-4037-847f-9c3e9bd77d2c/template.png?v=1641406430241"
+    />
+   
+    <title>{{site_title}}</title>
 
-    <title>{{seo.title}}</title>
+    <script
+      type="text/javascript"
+      src="https://pingsandboxsdk.singularkey.com/latest/singularkey.js" 
+    ></script>
     
-    <!-- Meta tags for SEO and social sharing -->
-    <link rel="canonical" href="{{seo.url}}">
-    <meta name="description" content="{{seo.description}}">
-    <meta property="og:title" content="{{seo.title}}">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="{{seo.url}}">
-    <meta property="og:description" content="{{seo.description}}">
-    <meta property="og:image" content="{{seo.image}}">
-    <meta name="twitter:card" content="summary">
-
-    <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
-
-    <!-- This is a handlebars IF statement
-         Checking for a custom "color" parameter from server.js -->
-    {{#if color}} 
-    <!-- If there is a color value, update the style for the page title -->
-    <style>
-      .title {
-        color: {{color}};
-      }
-    </style>
-    {{/if}}    
   </head>
-  <body>
+  
+  <body>  
+    <div class="background">
+      <div class="shape"></div>
+      <div class="shape"></div>
+    </div>
+    <div class="content" role="header"></div>
     <div class="wrapper">
       <div class="content" role="main">
-        
         <!-- This is the start of content for our page -->
-        <h1 class="title">Hello Node!</h1>
-        
-        <!-- Add text indicating that we've changed color OR had an error -->
-        {{#if color}}
-          <p class="color-info">
-            Now available in <b>{{color}}</b>!
-          </p>
-        {{/if}}  
-        
-        {{#if colorError}}
-          <p class="color-info">
-            
-            <!-- The server script passes colorError if the user submission can't be matched -->
-            Hmm. Couldn't find <b>"{{colorError}}"</b>. 
-            <a href="?randomize=go">Try a random color?</a>
-          </p>
-        {{/if}}
-        
-        <div class="color-form">
-          
-          <!-- Our default paragraph/message -->
-          {{#unless colorError}}
-            {{#unless color}}
-          
-            <!-- There are fancier ways to do this, 
-                 but nesting two "#unless" statements sets up an 
-                 "if these are both missing..." condition -->
-            <p>
-              Learn about communication with a server by talking about color.
-            </p>
-            {{/unless}}
-          {{/unless}}
-          
-          <!-- The "What's your favorite color?" form sends a POST request to the server
-               Check server.js to see how it works -->
-          <form class="color-search" method="post">
-              <label for="color">
-                
-                <!-- We use the handlebars "#if" statement so the form can adapt to its situation -->
-                {{#if color}}
-                  Try another color?<br>
-                {{else}}
-                  What's your favorite color?<br>
-                {{/if}}
-                <input id="color" name="color" required="required" type="text">
-              </label>
-            
-            <!-- If the user submits a value through the form 
-                 it'll be passed to the server in the request body  -->
-            <button type="submit">Submit</button>
-          </form>
-          
-          <!-- This randomize link communicates with the server (server.js) 
-               using a querystring and GET request instead of a form POST -->
-          Can't decide? <a href="?randomize=go">Use a random color!</a>
-        </div>
-        
-        <div class="illo-container">
-          <img src="https://cdn.glitch.com/c62efef6-1e75-45cf-b248-afeccdda9477%2Fillustration.svg?v=1618196069568" class="illustration" alt="Node logo" />
-        </div>
-        
-        <!-- Instructions on using this project -->
-        <div class="instructions">
-          <h2>
-            Using this project
-          </h2>
-          <p>
-            This is the Glitch <strong>Hello Node</strong> project. You can
-            use it to build your own app. Check out README.md in the editor for
-            more info and next steps you can take!
-          </p>
-        </div>
-        
+        <script>
+          (function() {
+            console.log('Starting idle timer');
+            const idleDurationSecs = 1500;    // X number of seconds
+            const redirectUrl = 'https://orchestrate.pingidentity.cloud/';  // Redirect idle users to this URL
+            let idleTimeout; // variable to hold the timeout, do not modify
+
+            const resetIdleTimeout = function() {
+              // Clears the existing timeout
+              console.log('Resetting idle timer')
+              if(idleTimeout) clearTimeout(idleTimeout);
+                // Set a new idle timeout to load the redirectUrl after idleDurationSecs
+                idleTimeout = setTimeout(() => location.href = redirectUrl, idleDurationSecs * 1000);
+            };
+
+            // Init on page load
+            resetIdleTimeout();
+
+            // Reset the idle timeout on any of the events listed below
+            ['click', 'touchstart', 'keyup'].forEach(evt => 
+              document.addEventListener(evt, resetIdleTimeout, false)
+            );
+          })();
+        </script>
+        <div id="widget" class="skWidget widget"></div>
+        <script
+          type="text/javascript"
+          src="https://pingsandboxsdk.singularkey.com/latest/singularkey.js"
+        ></script>
+
       </div>
     </div>
-    <!-- The footer holds our remix button — you can use it for structure or cut it out ✂ -->
-    <footer class="footer">
-      <div class="links"></div>
-      <a
-        class="btn--remix"
-        target="_top"
-        href="https://glitch.com/edit/#!/remix/glitch-hello-node"
-      >
-        <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
-          alt=""
-        />
-        Remix on Glitch
-      </a>
-    </footer>
+    
+    
+    <script>
+      const apiBaseURL = "{{base_url}}/v1";
+      const companyId = "{{company_id}}";
+      const policyId = "{{policy_id}}";
+      const access_token = "{{access_token}}";
+
+      var props = {
+        config: {
+          method: "runFlow",
+          apiRoot: apiBaseURL,
+          accessToken: access_token,
+          companyId: companyId,
+          policyId: policyId
+        },
+        useModal: false,
+        successCallback,
+        errorCallback,
+        onCloseModal
+      };
+          
+      /*** Invoke Singular Key Widget ****/
+      singularkey.skRenderScreen(document.getElementsByClassName("skWidget")[0],props);
+      
+      function successCallback(response) {
+        console.log(response);
+      }
+
+      function errorCallback(error) {
+        console.log(error);
+      }
+
+      function onCloseModal() {
+        console.log("onCloseModal");
+      }
+
+    </script>
+    
   </body>
 </html>
