🐏👬 Checkpoint ./src/pages/index.hbs:38221622/2072

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -15,18 +15,9 @@
       src="https://pingsandboxsdk.singularkey.com/latest/singularkey.js" 
     ></script>
     
-  </head>
-  
-  <body>  
-    <div class="content" role="header"></div>
-    <div class="wrapper">
-      <div class="content" role="main">
-        <div id="widget" class="skWidget widget"></div>
-      </div>
-    </div>
-    
-    
     <script>
+      
+    function. load
       const apiBaseURL = "{{base_url}}/v1";
       const companyId = "{{company_id}}";
       const policyId = "{{policy_id}}";
@@ -62,6 +53,12 @@
       }
 
     </script>
+    
+  </head>
+  
+  <body>  
+    <div id="widget" class="skWidget widget"></div>
+    
     
   </body>
 </html>
