🚴🌓 Checkpoint ./style/style.css:38221622/79 ./src/pages/index.hbs:38221622/299 ./public/style.css:38221622/103

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>{{site_title}}</title>
     <meta charset="utf-8" />
     <link
       rel="icon"
       type="image/x-icon"
       href="https://cdn.glitch.global/5521eed1-df1a-4037-847f-9c3e9bd77d2c/template.png?v=1641406430241"
     />
-   
-    <title>{{site_title}}</title>
-
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
+    
     <script
       type="text/javascript"
       src="https://pingsandboxsdk.singularkey.com/latest/singularkey.js" 
